# openenv-cloud-manager

./: CRM_Explained_PRD.md  Dockerfile  README.md  cloudmanager.md  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
